--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: IRANSans;
+    src: url("/fonts/IRANSans/IRANSansWeb_Medium.woff");
+}
+
+@layer base {
+  body {
+    @apply max-w-[1400px] mx-auto p-0 m-0 box-border min-h-[100vh] h-full font-[IRANSans];
+  }
+}
