--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,7 @@
     @apply !bg-stone-100
   }
   body {
-    @apply max-w-[1080px] mx-auto p-0 m-0 box-border min-h-[100vh] h-full font-[IRANSans] !bg-stone-100;
+    @apply max-w-[1080px] mx-auto p-0 m-0 box-border min-h-[100vh] h-full font-[IRANSans] !bg-stone-100 text-sm;
   }
   input:focus {
     @apply outline-none
