--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,4 +35,8 @@
   .shadow-box {
     @apply shadow-[0_0_10px_lightgray]
   }
+
+  .arshop-card {
+    @apply bg-gradient-to-r from-white via-purple-100 rounded-2xl px-4 py-6 mt-6
+  }
 }
