--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,6 +37,6 @@
   }
 
   .arshop-card {
-    @apply bg-gradient-to-r from-white via-purple-100 rounded-2xl px-4 py-6 mt-6
+    @apply bg-gradient-to-r from-gray-100 via-purple-100 rounded-2xl py-6 pt-12
   }
 }
