--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,7 @@
 
 @layer base {
   html {
-    @apply !bg-stone-100
+    @apply !bg-gray-100
   }
 
   * {
@@ -23,7 +23,7 @@
   }
 
   body {
-    @apply max-w-[1080px] mx-auto p-0 m-0 box-border min-h-[100vh] h-full font-[IRANSans] !bg-stone-100 text-sm;
+    @apply max-w-[1080px] mx-auto p-0 m-0 box-border min-h-[100vh] h-full font-[IRANSans] bg-gray-100 text-sm;
   }
 
   input:focus {
