--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,11 +16,11 @@
 
 @layer base {
   html {
-    @apply !bg-gray-100
+    @apply !bg-gray-100;
+    scrollbar-gutter: stable both-edges;
   }
 
  :where(*):not(.ltr, .ltr *) { direction: rtl; }
-
 
   body {
     @apply max-w-[1080px] mx-auto p-0 m-0 box-border min-h-[100vh] h-full font-[IRANSans] bg-gray-100 text-sm;
